--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -3425,7 +3425,7 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
 \end{defini}
 
 %hs1
-\begin{satz}
+\begin{satz}\label{satz:hs3.1}
   \begin{enumerate}
 
    \item Jeder (nicht zu einem Punkt entartete) Jordanbogen $J$ ist $(\FB_{2},
@@ -3500,7 +3500,7 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
 \end{satz}
 
 %lem 1
-\begin{lemma}
+\begin{lemma}\label{lem:3.1}
   Es seien $\FG$ eine Untergruppe affiner Abbildungen $\Aff$,
   $\CF\subseteq\CD$ eine Familie von Scheiben und $D,E\in\CD$ zwei elementar
   $(\FG,\CF)$"~zerlegungsgleiche konvexe Scheiben. Dann sind auch die Ränder
@@ -3593,9 +3593,249 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
       (\gamma\tau)^{k-1}(\gamma\tau)^{k-1}\gamma(x,i_{1})= (x,i_{1})$. Somit
       gilt für alle $A_{j}\in\{A_{1},\dotsc, A_{m}\}$:
       $\alpha(A_{j})\in\{A_{1},\dotsc, A_{m}\}$.
+      %Vorlesung vom 24.6.2011
+
+      Jetzt ist noch zu zeigen, dass für alle $j\in\{1,\dotsc,m\}$ gilt,
+      $A_{j}\subseteq\bd(D)\Leftrightarrow\alpha(A_{j})\subseteq\bd(E)$.
+      Somit beschreibt $\alpha$ die gewünschte Zerlegungsgleichheit von Rand
+      von $D$ und $E$. Dazu gehen wir, wie folgt, vor: $A_{j}\subseteq\bd(D)$
+      und $\alpha(A_{j})\subseteq\bd(D)\cup\bd(E)$ sind konvexe Bögen nach
+      Voraussetzung an $D$ und $E$.  Das $\alpha(A_{j})$ ist beschrieben durch
+      die Abbildung $(\gamma\tau)^{k-1}\gamma$. Durch die Anwendung von $\tau$
+      wird aus einem konvexen Bogen ein konkaver und umgekehrt. Die Abbildung
+      $\gamma$ erhält die Konvexität. Damit muss $k-1$ eine gerade Zahl, also
+      ist $k$ ungerade. Jede Anwendung von $\gamma$ beschreibt den Übergang
+      von $D$ zu $E$ bzw. umgekehrt, während $\tau$ keine Übergänge
+      beschreibt. Da $k$ ungerade ist, gilt: $\alpha(A_{j})\subseteq\bd(E)$.
+      Damit folgt analog, dass $A_{j}=\alpha(\alpha(A_{j}))\subseteq\bd(D)$.
     \end{enumerate}
   \end{proof}
 \end{lemma}
+
+\subsection{Charakterisierung von $\FB_{2}$-, $\Aff^{1}$- und $(\Sim,\CD)$"~Zerlegungsgleichheit}
+
+%satz 3
+\begin{satz}\label{satz:3.3}
+  Seien $D,E\in\CD$ konvexe Scheiben und $\FG$ eine Gruppe mit
+  $\FB_{2}^{+}<\FG<\Aff^{1}$. Dann sind $D$ und $E$ genau dann elementar
+  $\FG$"~zerlegungsgleich, wenn sie flächengleich sind und die Ränder von $D$
+  und $E$ nach Hinwegnahme von endlich vielen Strecken elementar
+  $\FG$"~zerlegungsgleich sind.
+  \begin{proof}
+    \begin{itemize}
+     \item ["`$\Rightarrow$"'] Bedingung an Ränder nach \autoref{lem:3.1} und
+      \autoref{satz:hs3.1}. Zur Fläche argumentieren wir wie folgt: Sei
+      $\lambda_{2}$ das Lebesgue-Maß in $\R^{2}$ und Zerlegungen
+      $D=D_{1}\cup\dotsb\cup D_{n}$ sowie
+      $E=\gamma_{1}(D_{1})\cup\dotsb\cup\gamma_{n}(D_{n})$. Es gilt,
+      $\lambda_{2}(D)= \lambda_{2}(D_{1})+\dotsb+\lambda_{2}(D_{n})-
+      \sum_{i=1}^{n} \lambda_{2}(\bd(D_{i}))$. Die Flächen von $\bd(D_{i})$
+      sind nicht doppelt zu zählen, aber
+      $\lambda_{2}(\bd(D_{i})\cap\bd(D))=0$, da $D$ konvex.Da die
+      $\gamma_{i}\in\Aff^{1}$ sind, gilt, $\lambda_{2}(D)=
+      \lambda_{2}(\gamma_{1}(D_{1}))+\dotsb+\lambda_{2}(\gamma_{n}(D_{n}))-
+      \sum_{i=1}^{n} \lambda_{2}(\bd(\gamma_{i}(D_{i})))= \lambda_{2}(E)$.
+     \item ["`$\Leftarrow$"'] Für relativ offene
+      Bögen $J_{i}$, relativ offene Strecken $S_{i}$ und $S_{i}'$ sowie
+      endlichen Menge $F$, $G$ und Abbildungen $\gamma_{i}\in\FG$ haben wir $\bd(D)= J_{1}\dotcup\dotso \dotcup
+      J_{n}\dotcup S_{1}\dotcup\dotso \dotcup S_{k}\dotcup F$ und $\bd$(E)=
+      $\gamma_{1}(J_{1})\dotcup\dotso \dotcup\gamma_{n}(J_{n})\dotcup\dotso
+      \dotcup S_{1}'\dotcup\dotso \dotcup S_{l}'\dotcup G$. Da $D$
+      und $E$ konvex sind, ist
+      $D=\conv(\cl(J_{1}))\cup\dotsb\cup\conv(\cl(J_{n}))\cup P$ und
+      $E=\gamma_{1}(\conv(\cl(J_{1})))\cup\dotsb\cup\gamma_{n}(\conv(\cl(J_{n})))\cup
+      Q$ elementare Zerlegungen mit $\conv(\cl(J_{i}))\in\CD$ (oder Strecken,
+      also vernachlässigbar), $P,Q$ flächengleiche Polygone (oder leer). Nach
+      dem \autoref{satz:3.1} sind $P,Q$ elementar $\FB_{2}$"~zerlegungsgleich.
+      Insgesamt sind $D$ und $E$ elementar $\FG$"~zerlegungsgleich.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+%folg 2
+\begin{folg}
+  Seien $D,E\in\CD$ konvexe Scheiben und $\FB_{2}^{+}<\FG<\Aff^{1}$.
+  \begin{enumerate}
+   \item Sind beide Scheiben streng konvex, so sind $D$ und $E$ genau dann
+    elementar $\FG$"~zerlegungsgleich, wenn wenn $D$ und $E$ flächengleich
+    sind und der Rand von $D$ bzw. der Rand von $E$ elementar
+    $\FG$"~zerlegungsgleich sind.
+   \item Ist $D$ ein Polygon, so sind $D$ und $E$ genau dann elementar
+    $\FG$"~zerlegungsgleich, wenn $E$ ein zu $D$ flächengleiches Polygon ist.
+   \item Eine Quadratur des Kreises mittels elementarer
+    $\FG$"~Zerlegungsgleichheit ist nicht möglich.
+  \end{enumerate}
+\end{folg}
+
+%satz 4
+\begin{satz}
+  Zwei konvexe Scheiben $D,E\in\CD^{1}$ sind genau dann
+  $(\Sim,\CD^{1})$"~zerlegungsgleich, wenn ihre Ränder nach Hinwegnahme
+  endlich vieler Strecken elementar $\Sim$"~zerlegungsgleich sind.
+  \begin{proof}
+    Der Beweis geht analog zu \autoref{satz:3.3}. Je zwei Polygone $P$ und $Q$
+    sind elementar $\Sim$"~zer\-legungs\-gleich mit polygonalen Teilen:
+    Flächengleichheit durch Streckung und dann Anwendung von \autoref{satz:3.1}.
+  \end{proof}
+\end{satz}
+
+%folg 3
+\begin{folg}
+  Seien $D,E\in\CD^{1}$ konvexe Scheiben.
+  \begin{enumerate}
+   \item Sind $D$ und $E$ streng konvex, so sind sie genau dann elementar
+    $(\Sim,\CD^{1})$"~zer\-legungs\-gleich, wenn ihre Ränder elementar
+    $\Sim$"~zerlegungsgleich sind.
+   \item Ist $D$ ein Polygon, so sind $D$ und $E$ genau dann
+    $(\Sim,\CD^{1})$"~zerlegungsgleich, wenn $E$ ein Polygon ist.
+   \item Eine Quadratur des Kreises mittels elementarer
+    $(\Sim,\CD^{1})$"~Zerlegungsgleichheit ist nicht möglich.
+  \end{enumerate}
+\end{folg}
+
+\section{Geeignete Gruppen für die Quadratur des Kreises}
+
+\subsection{Notwendige Bedingungen für die Quadratur des Kreises}
+
+\begin{defini}[Kontraktion]
+  \highl{Kontraktion}: $\exists0<c<1\,\forall x,y\in\R^{2}\colon
+  d(\gamma(x),\gamma(y))\leq cd(x,y)$
+\end{defini}
+
+%hs2
+\begin{satz}\label{satz:hs3.2}
+  Sei $J\subseteq\R^{2}$ ein Jordanbogen, aber keine Strecke. Ist $\FG<\Aff$ eine
+  Gruppe affiner Abbildungen derart, dass $J$ bezüglich $(\FG,\CD)$
+  unwesentlich ist, so enthält $\FG$ eine Kontraktion $\gamma$.
+  \begin{proof}
+    Sei $J$ ein $(\FG,\CD)$"~unwesentlicher Bogen. Dann existiert ein
+    $D\in\CD$ und $\gamma_{1},\gamma_{2},\dotsc\in\FG$ mit $\gamma_{1}(J),
+    \gamma_{2}(J),\dotsc\subseteq\bd(D)$ paarweise disjunkt.  Da $J$ keine
+    Strecken besitzt, gibt es ein $x_{0}\in\R^{2}$ und ein $r>0$ mit
+    $B(x_{0},r)\subseteq\conv(J)$ und es folgt:
+    \begin{gather}
+      \label{eq:23}\gamma_{i}(B(x_{0},r))\subseteq\conv(\gamma_{i}(J))
+    \end{gather}
+    Es ist der Rand von $D$ kompakt und homöomorph zur Kreislinie. Weiterhin
+    sind die $\gamma_{i}(J)\subseteq\bd(D)$ disjunkt. Also gibt es
+    $(i_{k})_{k}\subseteq(i_{i})\,\exists \tilde{x}\in\bd(D)\,\forall
+    x_{i_{k}}\in\gamma_{i_{k}}(J)\colon\lim_{k\rightarrow \infty} x_{i_{k}}
+    =\tilde{x}$. Somit folgt, $\lim_{k\rightarrow \infty}
+    \diam(\gamma_{i_{k}}(J))=0$ und mit der \autoref{eq:23} folgt:
+    \begin{gather*}
+      \lim_{k\rightarrow \infty}
+    \diam(\gamma_{i_{k}}(B(x_{0},r)))\leq\lim_{k\rightarrow \infty}
+    \diam(\conv(\gamma_{i_{k}}(J)))= \lim_{k\rightarrow \infty}
+    \diam(\gamma_{i_{k}}(J))=0
+    \end{gather*}
+     Also gibt es ein $k_{0}$, so dass für alle
+    $k\geq k_{0}$ das $\gamma_{i_{k}}$ eine Kontraktion ist.
+  \end{proof}
+\end{satz}
+
+%folg 4
+\begin{folg}\label{folg:3.4}
+  Sind eine Kreisscheibe $D$ und ein  Quadrat $Q$ bezüglich einer Gruppe von
+  Affinitäten elementar $\FG$"~zerlegungsgleich, so enthält die Gruppe $\FG$
+  eine Kontraktion.
+  \begin{proof}
+    Sind $D$ und $Q$ elementar $\FG$"~zerlegungsgleich, so können wir das
+    \autoref{lem:3.1} anwenden. Demnach sind $\bd(D)$ und $\bd(Q)$ elementar
+    $\FG$"~zerlegungsgleich nach Hinwegnahme von endlich vielen Strecken und
+    $(\FG,\CD)$"~unwesentlichen Bögen. Damit folgt nun, dass ein
+    $(\FG,\CD)$"~unwesentliches Kreisbogenstück existiert und nach dem
+    \autoref{satz:hs3.2} gibt es eine Kontraktion $\gamma\in\FG$.
+  \end{proof}
+\end{folg}
+
+%satz 5
+\begin{satz}
+  Ermöglicht eine Gruppe $\FG<\Aff$ für jede Kreisscheibe $D$ der Fläche $1$
+  und jedes Quadrat $Q$ der Fläche $1$ eine elementare
+  $\FG$"~Zerlegungsgleichheit, so enthält $\FG$ eine Kontraktion $\gamma$ und
+  alle Orbits $\FG(x_{0})$ mit $x_{0}\in\R^{2}$ sind dicht in $\R^{2}$.
+  \begin{proof}
+    \begin{itemize}
+     \item Kontraktion nach \autoref{folg:3.4}
+     \item $x_{0}\in\R^{2}, B(x_{1},\epsilon)$ fixiert, zu zeigen:
+      $\exists\alpha\in\FG\colon(\alpha(x_{0})\in B(x_{1},\epsilon))$.
+      $\{Q_{1},Q_{2},\dotsc\}$ Überdeckung des $\R^{2}$ durch
+      Einheitsquadrate. Dann folgt, dass es ein $k\geq1$ und ein $i\geq1$, so
+      dass $\gamma^{k}(Q_{i})\subseteq B(x_{1},\epsilon)$ gibt. Es sind
+      $B(x_{0}, \frac{1}{\sqrt{\pi}})$ und $Q_{i}$ elementar
+      $\FG$"~zerlegungsgleich. Also existiert ein $\beta\in\FG$, so dass
+      $\beta(x_{0})\in Q_{i}$. Zusammen mit der vorigen Aussage ergibt sich:
+      $\alpha(x_{0})\coloneqq\gamma^{k}\beta(x_{0})\in\gamma^{k}(Q_{i})\subseteq
+      B(x_{1},\epsilon)$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\subsection{Zerlegungsgleichheit mit zwei Zerlegungsteilen}
+
+%lem 2
+\begin{lemma}
+  Seien $D,E\in\CD$ und $\FG<\Aff$ eine Gruppe, die Abbildungen
+  $\alpha,\beta\in\FG$ mit den Eigenschaften
+  \begin{enumerate}[(i)]
+   \item $\alpha(d)\subseteq E, \beta(E)\subseteq D$
+   \item Es existiert ein Bogen $\Gamma_{D}\subseteq\bd(D)$ mit
+    $\alpha(D)\cap\bd(E)= \alpha(\Gamma_{D})$.
+   \item Es existiert ein Bogen $\Gamma_{E}\subseteq\bd(E)$ mit
+    $\beta(E)\cap\bd(D)=\beta(\Gamma_{E})$.
+   \item $\Gamma_{D}\cap\beta(\Gamma_{E})=
+    \Gamma_{E}\cap\alpha(\Gamma_{D})=\emptyset$.
+  \end{enumerate}
+  Dann sind $D$ und $E$ elementar $\FG$"~zerlegungsgleich und es werden nur
+  zwei Zerlegungsteile benutzt.
+  \begin{proof}
+    Folgt in der Vorlesung vom 27.6
+  \end{proof}
+\end{lemma}
+
+%folg 5
+\begin{folg}
+  Je zwei konvexe Polygone $P,Q\subseteq \R^{2}$ sind elementar
+  $\Sim$"~zerlegungsgleich, wobei nur zwei Zerlegungsteile benötigt werden.
+  \begin{proof}
+    \missingfigure{Siehe Foto vom 24.\,6.2011}
+  \end{proof}
+\end{folg}
+
+\subsection{Charakterisierung der Gruppen für die Quadratur des Kreises}
+%hs3
+\begin{satz}
+  Es seien $D\in\CD$ und $U\subseteq\R^{2}$ eine nichtleere offene Menge.
+  Enthält eine Gruppe $\FG<\Aff$ eine Kontraktion $\gamma$ und ist jeder Orbit
+  $\FG(x_{0})$ mit $x_{0}\in\R^{2}$ dicht in $\R^{2}$, so existiert
+  $\alpha\in\FG$ mit $\alpha(D)\subseteq U$.
+  \begin{proof}
+    Aufgrund des Banachschen Fixpunktsatzes gibt es ein $x_{0}\in\R^{2}$ mit
+    $\gamma(x_{0})=x_{0}$. Die Orbits sind dicht, damit gibt es ein
+    $\beta\in\FG$ mit $\beta(x_{0})\in U$. Für alle $k\in\Z$ gilt:
+    $\beta\gamma^{k}\beta^{-1}(\beta(x_{0}))=\beta(x_{0})$.
+
+    Für alle $\epsilon>0$ gibt es ein großes $k_{\epsilon}$, so dass
+    $\beta\gamma^{k}\beta^{-1}$ eine Kontraktion mit Fixpunkt $\beta(x_{0})$
+    ist  und für alle $x,y\in\R^{2}$ ist der Abstand
+    $d(\beta\gamma^{k}\beta^{-1}(x), \beta\gamma^{k}\beta^{-1}(y))\leq\epsilon
+    d(x,y)$. Da $U$ offen und $D$ beschränkt war, existiert ein $k_{0}$, so
+    dass $\beta\gamma^{k}\beta^{-1}(D)\subseteq U$.
+  \end{proof}
+\end{satz}
+
+%satz 6
+\begin{satz}
+  Für eine Gruppe $\FG<\Aff$ sind äquivalent:
+  \begin{enumerate}[(i)]
+   \item Jeder Kreis der Fläche $1$ und jedes Quadrat der Fläche $1$ sind
+    elementar $\FG$"~zer\-legungs\-gleich.
+   \item Je zwei Scheiben $D$ und $E$ aus $\CD$ sind elementar
+    $\FG$"~zerlegungsgleich unter Benutzung von vier Zerlegungsteilen.
+   \item $\FG$ enthält eine Kontraktion und alle Orbits $\FG(x_{0})$ mit
+    $x_{0}\in\R^{2}$ sind dicht in $\R^{2}$.
+  \end{enumerate}
+\end{satz}
 
 \clearpage
 \appendix
