--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -3772,7 +3772,7 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
 \end{folg}
 
 %satz 5
-\begin{satz}
+\begin{satz}\label{satz:3.5}
   Ermöglicht eine Gruppe $\FG<\Aff$ für jede Kreisscheibe $D$ der Fläche $1$
   und jedes Quadrat $Q$ der Fläche $1$ eine elementare
   $\FG$"~Zerlegungsgleichheit, so enthält $\FG$ eine Kontraktion $\gamma$ und
@@ -3797,7 +3797,7 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
 \subsection{Zerlegungsgleichheit mit zwei Zerlegungsteilen}
 
 %lem 2
-\begin{lemma}
+\begin{lemma}\label{lem:3.2}
   Seien $D,E\in\CD$ und $\FG<\Aff$ eine Gruppe, die Abbildungen
   $\alpha,\beta\in\FG$ mit den Eigenschaften
   \begin{enumerate}[(i)]
@@ -3812,7 +3812,135 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
   Dann sind $D$ und $E$ elementar $\FG$"~zerlegungsgleich und es werden nur
   zwei Zerlegungsteile benutzt.
   \begin{proof}
-    Folgt in der Vorlesung vom 27.6
+    \begin{itemize}
+     \item Wir setzen $D_{1}\coloneqq\bigcup_{i=0}^{\infty} (\beta\alpha)^{i}
+      (D\setminus\beta(E))\subseteq D$. Dann haben wir $\beta^{-1}(D\setminus
+      D_{1})=
+      \beta^{-1}((D\setminus(D\setminus\beta(E)))\cap(D\setminus\bigcup_{i=1}^{\infty}
+      (\beta\alpha)^{-i}(D\setminus\beta(E))))=
+      \beta^{-1}(\beta(E)\cap(D\setminus \bigcup_{i=1}^{\infty}
+      (\beta\alpha)^{-i}(D\setminus\beta(E))))=
+      \beta^{-1}(\beta(E)\setminus\beta\alpha(D_{1}))=
+      E\setminus\alpha(D_{1})$. Damit existieren aber die folgenden disjunkten
+      Zerlegungen: $D=D_{1}\dotcup(D\setminus D_{1})=\colon D_{1}\dotcup
+      D_{2}$. Wegen $\alpha(D_{1})\subseteq E$ ist $E= \alpha(D_{1})\dotcup
+      (E\setminus\alpha(D_{1}))= \alpha(D_{1}) \dotcup\beta^{-1}(D\setminus
+      D_{1})= \alpha( D_{1}) \dotcup\beta^{-1}(D_{2})$.
+     \item Wir wollen zeigen, dass  $\cl(D_{1})$ und $\cl(D_{2})$ topologische
+      Scheiben sind. Weiter sind $D= \cl(D_{1})\cup\cl(D_{2})$ und $E=
+      \alpha(\cl(D_{1}))\cup\beta^{-1}(\cl(D_{2}))$ elementare Zerlegungen.
+      Die Strategie dazu ist: Man zeigt eine homöomorphe Äquivalenz zu einer
+      elementaren Zerlegungsgleichheit zweier spezieller Scheiben $D_{0}$ und
+      $E_{0}$ mittels entsprechend definierter Teilscheiben $\cl(D_{1,0})$ und
+      $\cl(D_{2,0})$ sowie Abbildungen $\alpha_{0}$ und $\beta_{0}$.
+
+      Wir stellen zunächst fest, dass gilt:
+      \begin{gather}
+	\label{eq:24} \beta\alpha(D)\subseteq\inn(D)\qquad \alpha\beta(E)\subseteq\inn(E)
+      \end{gather}
+      Denn: $\beta\alpha(D)\subseteq\beta(E)\subseteq D$ und $\beta\alpha(D)
+      \cap\bd(D)= \beta(\alpha (D)\cap E) \bd(D)=
+      \beta\alpha(D)\cap(\beta(E)\cap\bd(D))=
+      \beta\alpha(D)\cap\beta(\Gamma_{E})=
+      \beta\alpha(D)\cap\beta(\bd(E)\cap\Gamma_{E})=
+      \beta(\alpha(D)\cap\bd(E)) \cap\beta(\Gamma_{E})=
+      \beta(\alpha(\Gamma_{D})\cap\Gamma_{E})= \emptyset$.
+
+      Die Menge $K= \bigcap_{i=0}^{\infty} (\beta \alpha)^{i}(D)$ ist ist eine
+      Einermenge $K=\{x_{k}\}$. Aufgrund der ersten Eigenschaft ist $K$ der
+      Durchschnitt einer absteigenden Folge nichtleerer kompakter Mengen. Nach
+      dem Satz von \textsc{Heine}"~\textsc{Borel} (\autoref{satz:hs3}) ist
+      $K\neq\emptyset$ und kompakt. Nach müssen wir Fälle unterscheiden:
+      \begin{enumerate}[1.\,F{a}ll]
+       \item $\dim_{aff} (K)=0$: (Das ist die Dimension des von $K$ erzeugten
+	affinen Raumes). In dem Fall ist $K$ eine Einermenge.
+       \item $\dim_{aff}(K)=d>0$: Wir wissen, dass $\beta\alpha(K)=K$. Damit
+	folgt, dass $\beta\alpha|_{aff(K)}$ eine äquiaffine Abbildung in der
+	affinen Hülle von $K$ ist. Nach der obigen Eigenschaft liegt
+	$K\subseteq\inn(D)$ und $aff(K)\cap D$ hat endliches positives
+	$d$-dimensionales Hausdorff-Maß $\mu_{d}(aff(K)\cap D)>0$. Aber
+	andererseits $\beta\alpha(aff(K)\cap D)=
+	aff(K)\cap\beta\alpha(D)\subseteq aff(K)\cap\inn(D)$, d.\,h.
+	$\mu_{d}(\beta\alpha(aff(K)\cap D))<\mu_{d}(aff(K)\cap D)$. Das steht
+	aber im Widerspruch dazu, dass die Abbildung äquiaffin ist. Also ist
+	die Aussage bewiesen.
+      \end{enumerate}
+
+      Darstellung von $D$ als disjunkte Vereinigung
+      \begin{gather}
+	\label{eq:25}  D=K\dotcup\bigcup_{i=0}^{\infty} (\beta
+	   \alpha)^{i}(D\setminus\beta\alpha(D))
+      \end{gather}
+
+      Durchschnitt von $D_{1}$ mit dem "`Ring"'
+      $(\beta\alpha)^{i}(D\setminus\beta\alpha(D))$ ist:
+      \begin{gather}
+	\label{eq:26}D_{1}\cap(\beta\alpha)^{i}(D\setminus\beta\alpha(D))=
+	   (\beta\alpha)^{i} (D\setminus\beta(E))
+      \end{gather}
+      Denn: $D\setminus\beta(E)\subseteq D\setminus\beta\alpha(D)$ wegen der
+      ersten Eigenschaft.
+
+      Topologische Struktur auf dem abgeschlossenen "`Ring"': $\cl
+      (D\setminus\beta\alpha(D))$ nach den obigen Eigenschaften. Der Rand von
+      $\cl(D\setminus\beta\alpha(D))$ zerfällt in $\bd(D)$ (außen) und
+      $\beta\alpha(\bd(D))$ (innen) wegen der Ringeigenschaft. Der Abschluss
+      $\cl(D\setminus\beta(E))$ gehört zum äußeren Rand im Abschluss
+      $\cl(\bd(D)\setminus\beta(\Gamma_{E}))$ und inneren Rand in
+      $\beta\alpha(\Gamma_{D})$. Analoge Betrachtungen sind für $D_{2}$
+      möglich.
+
+      Nun definieren wir einen Homöomorphismus
+      $\phi\colon\R^{2}\rightarrow\R^{2}$:
+      \begin{itemize}
+       \item Wegen der vierten Eigenschaft existiert ein Homöomorphismus
+	$\rho\colon\bd(D)\rightarrow\bd(D)$ mit
+	$\rho(\Gamma_{D})=\Gamma_{D_{0}}$ und $\rho(\beta(\Gamma_{E}))=
+	\beta_{0}(\Gamma_{E_{0}})$.
+       \item
+	$\beta_{0}\alpha_{0}\rho(\beta\alpha)^{-1}\colon\beta\alpha(\bd(D))\rightarrow\beta_{0}\alpha_{0}(\bd(D_{0}))$
+	bildet $\beta\alpha(\Gamma_{D})$ auf
+	$\beta_{0}\alpha_{0}(\Gamma_{D_{0}})$ ab.
+       \item Aufgrund der obigen Strukturaussage existiert ein Homöomorphismus
+	\begin{gather}
+	  \label{eq:26-2}
+	     \sigma\colon\cl(D\setminus
+	\beta\alpha(D))\rightarrow\cl(D_{0}\setminus
+	\beta_{0}\alpha_{0}(D_{0}))\\
+	  \sigma|_{\bd(D)}= \rho\qquad \sigma|_{\beta\alpha(\bd(D))}=
+	\beta_{0}\alpha_{0}\rho(\beta\alpha)^{-1}\\
+	  \sigma(D\setminus
+	\beta(E))= D_{0}\setminus \beta_{0}(E_{0})
+	\end{gather}
+	
+       \item Es existiert ein Homöomorphismus
+	$\tau\colon\R^{2}\setminus\inn(D) \rightarrow
+	\R^{2}\setminus\inn(D_{0})$ mit $\tau|_{\bd(D)}=\gamma$.
+       \item Nun definieren wir den Homöomorphismus:
+	\begin{gather}
+	  \label{eq:27}
+	     \phi(x)=
+	     \begin{cases}
+	       \tau(x)&  x\in\R^{2}\setminus\inn(D)\\
+	       (\beta_{0}\alpha_{0})^{i} \sigma(\beta\alpha)^{-i}(x)&
+	       x\in\cl(\beta\alpha)^{i} (D\setminus\beta\alpha(D)), i\geq0\\
+	       x_{k_{0}}&  x=x_{k}, K=\{x_{k}\}, K_{0}= \{x_{k_{0}}\}
+	     \end{cases}
+	\end{gather}
+	Wegen \autoref{eq:25} ist $\phi$ eine Bijektion der Ebene mit $\phi(D)= D_{0}$.
+       \item Wegen \autoref{eq:26-2} und der Eigenschaft, dass der
+	Durchschnitt eine Einermenge wird, ist $\phi$ in beiden Richtungen
+	stetig.
+       \item Aus \autoref{eq:26-2} und \autoref{eq:26} folgt,
+	$\phi(\cl(D_{1}))= \cl(D_{1,0})$ und $\phi(\cl(D_{2}))= \cl(D_{2,0})$.
+      \end{itemize}
+
+      Also sind $\cl(D_{1})$ und $\cl(D_{2})$ wie $\cl(D_{1,0})$ und
+      $\cl(D_{2,0})$ topologische Scheiben und $D$ wird in $\cl(D_{1})$ und
+      $\cl(D_{2})$ elementar zerlegt (wie $D_{0}$ in $\cl(D_{1,0})$ und
+      $\cl(D_{2,0})$). Analog ergibt sich eine Aussage über $E, E_{1}$ und
+      $E_{2}$.
+    \end{itemize}
   \end{proof}
 \end{lemma}
 
@@ -3827,7 +3955,7 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
 
 \subsection{Charakterisierung der Gruppen für die Quadratur des Kreises}
 %hs3
-\begin{satz}
+\begin{satz}\label{satz:hs3.3}
   Es seien $D\in\CD$ und $U\subseteq\R^{2}$ eine nichtleere offene Menge.
   Enthält eine Gruppe $\FG<\Aff$ eine Kontraktion $\gamma$ und ist jeder Orbit
   $\FG(x_{0})$ mit $x_{0}\in\R^{2}$ dicht in $\R^{2}$, so existiert
@@ -3858,6 +3986,58 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
    \item $\FG$ enthält eine Kontraktion und alle Orbits $\FG(x_{0})$ mit
     $x_{0}\in\R^{2}$ sind dicht in $\R^{2}$.
   \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item [(ii)$\Rightarrow$(i)] klar
+     \item [(i)$\Rightarrow$(iii)] \autoref{satz:3.5}
+     \item [(iii)$\Rightarrow$(ii)] Seien $D,E\in\CD$ gegeben. Nach dem
+      \autoref{satz:hs3.3} gibt es ein $\delta\in\FG$ mit
+      $\delta(D)\subseteq\inn(E)$. Das $\Gamma$ ist eine Strecke durch das
+      Innere von $\delta(D)$, die $E$ in Scheiben $E_{1}$ und $E_{2}$ teilt.
+      Das $Z$ ist eine Zusammenhangskomponente von $\delta(D)\cap E_{1}$.
+      Weiterhin folgt aus dem \autoref{satz:hs3.3}, dass es
+      $\alpha,\beta\gamma\in\FG$ gibt, mit der Eigenschaft $\alpha\delta(D),
+      \beta(E_{1}), \gamma(E_{2})\subseteq\inn(Z)$ paarweise disjunkt sind.
+      Wir wählen Bögen $\Gamma_{D}\subseteq\bd(\delta(D))\cap\inn(E_{2})$,
+      $\Gamma_{E}\subseteq\bd(E)\setminus E_{2}$,
+      $J_{1}\subseteq\bd(Z)\cap\inn(E_{1})$,
+      $J_{2}\subseteq\bd(Z)\cap\inn(\delta(D))$ und
+      $J_{3}\subseteq\bd(\gamma(E_{2}))$. Wir wählen ein $H\in\CD$ mit
+      $\inn(H)\subseteq
+      Z\setminus(\alpha\delta(D)\cup\beta(E_{1})\cup\gamma(E_{2}))$,
+      $H\cap\bd(Z)= J_{1}\cup J_{2}$, $H\cap\bd(\alpha\delta(D))=
+      \alpha(\Gamma_{D})$, $H\cap\bd(\beta(E_{1}))= \beta(\Gamma_{E})$,
+      $H\cap\bd(\gamma(E_{2}))= J_{3}$.
+
+      Die $D'\coloneqq\cl(\delta(D)\setminus(H\cup\gamma(E_{2})))$ und
+      $E'\coloneqq\cl(E_{1}\setminus H)$ sind Scheiben und erfüllen die
+      Voraussetzungen von \autoref{lem:3.2}. Damit ergeben sich Zerlegungen:
+      $D'= D_{1}'\cup D_{2}'$ und
+      $E'=\gamma_{1}(D_{1}')\cup\gamma_{2}(D_{2}')$. Insgesamt existieren die
+      Zerlegungen:
+      \begin{align*}
+	D&= \delta^{-1}(\delta(D))= \delta^{-1}(D'\cup H\cup\gamma(E_{2}))=
+	   \delta^{-1}(D_{1}') \cup\delta^{-1}(D_{2}') \cup\delta^{-1}(H)\cup
+	   \delta^{-1}\gamma(E_{2})\\
+	E&= E_{1}\cup E_{2}= E' \cup H\cup E_{2}=
+	   \gamma_{1}(D_{1}')\cup\gamma_{2}(D_{2}') \cup H\cup E_{2}
+      \end{align*}
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\subsection{Zur optimalen Teileanzahl}
+
+Die untere Abschätzung (z.\,B. für die Quadratur des Kreises) erhält man durch
+den folgenden Satz.
+
+% satz 7
+\begin{satz}
+  Sind eine streng konvexe Scheibe $D\in\CD$ und eine beliebige Scheibe
+  $E\in\CD$ unter Benutzung von nur zwei Zerlegungsteilen elementar
+  $\FG$"~zerlegungsgleich vermöge einer Gruppe $\FG\leq\Aff$, so existiert ein
+  Bogen $\Gamma_{D}$ im Rand von $D$ und eine Abbildung $\gamma\in\FG$, sodass
+  $\gamma(\Gamma_{D})\subseteq\bd(E)$.
 \end{satz}
 
 \clearpage
