--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -4204,6 +4204,190 @@ $(\FG,\CF)$"~zerlegungsgleich"'.
   Eine Illustation: "`Prinzip des selbstaffinen Bogens"'
 \end{bemerk}
 
+\chapter{Das Zerlegungsproblem von Borsuk}
+
+\textsc{Karol Borsuk} stellte 1933 die Frage, ob sich jede beschränkte
+Teilmenge~$E$ des $\R^{n}$ in $n+1$~Mengen zerlegen lässt, von denen jede
+einen kleineren Durchmesser als $E$ hat.
+
+\begin{bemerk}
+  Man betrachtet Mengen mit mehr als einem Element, sonst wäre der
+  Durchschnitt der Menge~$0$. Außerdem verwenden die Betrachtungen die
+  euklidische Metrik.
+
+  Weiterhin ergeben sich folgende Beobachtungen:
+  \begin{enumerate}[1.]
+   \item Das reguläre Simplex~$S$ bzw. die Menge $V_{S}$ seiner $n+1$~Ecken
+    sind jeweils in $n+1$~Teile von kleineren Durchmesser zerlegbar. Jedoch
+    reichen $n$~Teile nicht aus.
+   \item Die Kugel $B(0,1)$ und die Sphäre $\CS^{n-1}=\bd(B(0,1))$ sind auch
+    jeweils in $n+1$~Teile kleineren Durchmessers zerlegbar. Wieder reichen
+    $n$~Teile nicht aus. Nach dem \textsc{Borsuk}"~\textsc{Ulam}"~Theorem ist
+    $\CS^{n-1}$ nicht in $n$~Teile kleineren Durchmessers zerlegbar.  Danach
+    wird $\CS^{n-1}$ bzw. $B(0,1)$ in $n+1$~Teile kleineren Durchmessers
+    zerlegt. Nun wird ein reguläres Simplex mit Mittelpunkt~$0$ in die Kugel
+    bzw. Sphäre gelegt. Es sei $\overline{n}$ die Zentralprojektion von
+    $\R^{n}\setminus0$ auf den Rand des Simplex. Weiterhin seien $F_{1},\dotsc, F_{n+1}$
+    die Seitenflächen des Simplex. Dann ergeben sich Zerlegungen $\CS^{n-1}=
+    \bigcup_{i=1}^{n+1} \CS^{n-1}\cap\overline{n}^{-1}(F_{i})$ bzw. $B(0,1)=
+    \bigcup_{i=1}^{n+1} ((B(0,1)\cap\overline{n}^{-1}(F_{i}))\cup0)$. Dabei
+    soll $0$ den Nullpunkt darstellen.
+  \end{enumerate}
+\end{bemerk}
+
+\section{Die Dimensionen 1 bis 3}
+
+%satz 1
+\begin{satz}
+  Sei $n\in\{1,2,3\}$. Dann besitzt jede beschränkte Menge $M\subseteq\R^{n}$
+  mit einem Durchmesser größer als $0$ eine Zerlegung in $n+1$~Teilmengen
+  deren Durchmesser kleiner als der von $M$ ist.
+  \begin{proof}
+    \begin{itemize}
+     \item [$n=1$] trivial, Halbierung der Strecke.
+     \item [$n=2$]
+      \begin{enumerate}[1.\,Schr{i}tt]
+       \item Überdeckung von $M$ durch ein regelmäßiges Sechseck~$S$, deren
+	Gegenseiten jeweils den Abstand $\diam M$ haben. Dazu betrachten wir
+	eine Stützfunktion von $M$ zum Vektor $(\cos\alpha,\sin\alpha)$ mit
+	$h_{M}(\cos\alpha, \sin\alpha)\coloneqq\sup\Set{\langle(x,y),
+	(\cos\alpha, \sin \alpha)\rangle | (x,y)\in M}$. Weiterhin betrachten
+	wir eine Stützgerade von $M$ zum Vektor $(\cos\alpha, \sin\alpha)$ mit
+	$H_{M}(\alpha)=\Set{(x,y)\in\R^{2} | \langle(x,y), (\cos\alpha,
+	\sin\alpha)\rangle= h_{M}(\cos\alpha, \sin\alpha)}$. Somit ist der
+	Abstand $\abs{h_{M}(\cos\alpha,\sin\alpha)+ h_{M}(\cos(\alpha+\pi),
+	\sin(\alpha+\pi))}$ gegenüberliegender Stützgeraden kleiner oder
+	gleich dem Durchmesser von $M$.
+	\missingfigure{Zeichnung mit Stützgeraden}
+
+	Sei $\alpha\in[0,\pi]$. Wir betrachten ein Parallelogramm $P(\alpha)=
+	(a(\alpha), b(\alpha), c(\alpha), d(\alpha))$ mit $\{a(\alpha)\}=
+	H_{M}(\alpha)\cap H_{M}(\alpha+\nicefrac{4}{3}\pi)$, $\{b(\alpha)\}=
+	H_{M}(\alpha)\cap H_{M}(\alpha+\nicefrac{\pi}{3})$, $\{c(\alpha)\}=
+	H_{M}(\alpha+\nicefrac{\pi}{3})\cap H_{M}(\alpha+\pi)$ und
+	$\{d(\alpha)\}= H_{M}(\alpha+\pi)\cap
+	H_{M}(\alpha+\nicefrac{4}{3}\pi)$. Es sind $l_{1}(\alpha)$ und
+	$l_{2}(\alpha)$ die Längen der Lote von $a(\alpha)$ auf
+	$H_{M}(\alpha+\nicefrac{5}{3}\pi)$ bzw. von $c(\alpha)$ auf
+	$H_{M}(\alpha+\nicefrac{2}{3}\pi)$. Wir haben die Stetigkeit der
+	Größen in Abhängigkeit von $\alpha$, $l_{1}(\pi)=l_{2}(0)$ und
+	$l_{2}(\pi)= l_{1}(0)$. Nach dem Zwischenwertsatz gibt es ein
+	$\alpha_{0}\in[0,\pi]$ mit $l_{1}(\alpha_{0})= l_{2}(\alpha_{0})$.
+	Also liegen $H_{M}(\alpha+\nicefrac{5}{3}\pi)$ und
+	$H_{M}(\alpha+\nicefrac{2}{3}\pi)$ bezüglich des Mittelpunkts von
+	$P(\alpha_{0})$ symmetrisch. Durch symmetrisches Wegschieben
+	gegenüberliegender Stützgeraden vom Mittelpunkt bis zum paarweisen
+	Abstand $\diam M$ erhält man das gewünschte überdeckende reguläre
+	Sechseck~$S$.
+       \item Zerlegung von $S$ in drei Teile mit kleinerem Durchmesser als der
+	von $M$:
+	\missingfigure{Sechseck mit "`Mercedesstern"'}
+      \end{enumerate}
+     \item [$n=3$] Im ersten Schritt wird $M$ durch ein regelmäßiges Oktaeder
+      $O$, dessen Gegenseiten jeweils den Abstand $\diam M$ haben. Die
+      Konstruktion geht analog zu dem obigen Fall. Wir nehmen o.\,B.\,d.\,A.
+      an, dass $\diam M=1$. Dann habe $O$ die folgenden Ecken:
+      $(\pm\nicefrac{\sqrt{3}}{2},0,0)$, $(0,\pm\nicefrac{\sqrt{3}}{2},0)$ und
+      $(0,0,\pm\nicefrac{\sqrt{3}}{2})$. Im zweiten Schritt werden Ecken
+      abgeschnitten. Von jedem Paar gegenüberliegender Ecken von $O$ wird eine
+      im Abstand $\nicefrac{1}{2}$ vom Mittelpunkt so abgeschnitten, dass $M$
+      ganz im Restkörper~$V$ enthalten ist. Schließlich wird $V$ in vier Teile
+      vom Durchmesser kleines als $1$ zerlegt.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\section{Höhere Dimensionen}
+
+Zum Nachweis von der Vermutung von \textsc{Borsuk} genügt die Betrachtung
+konvexer Körper. Dazu sei $M\subseteq\R^{n}$ beschränkt mit einem Durchmesser
+größer als $0$. Wir setzen $K\coloneqq\cl(\conv(M))\geq M$. Dann ist $K$
+konvex, kompakt und die Durchmesser beider Mengen sind gleich. Somit liefert
+eine Zerlegung von $K$ in $n+1$ Teile kleineren Durchmessers eine Zerlegung
+von $M$.
+
+%satz 2
+\begin{satz}
+  Sei $K\subseteq\R^{n}$ ein konvexer Körper mit regulärem Rand, d.\,h. zu
+  jedem Randpunkt gibt es genau eine Tangentialhyperebene. Dann ist $K$ in
+  $n+1$~Teilmengen kleineren Durchmessers zerlegbar.
+  \begin{proof}
+    Wir wissen, $\CS^{n-1}\subseteq\R^{n}$ wird durch $n+1$ abgeschlossene
+    Mengen $F_{1},\dotsc, F_{n+1}$ mit Durchmesser $\diam
+    F_{i}<\diam\CS^{n-1}=2$ überdeckt. Wir definieren eine stetige Abbildung
+    $f\colon\bd(K)\rightarrow\CS^{n-1}$ durch $f(x)$ ist der äußere
+    Normalenvektor der Tangentialhyperebene von $K$ in $x$.
+    \missingfigure{Foto einbauen}
+    Wir zeigen, $\diam A_{i}<\diam K$ für $1\leq i\leq n+1$. Dazu sind die
+    $A_{i}$ kompakt. Also existieren $x_{0}$ und $x_{1}$ aus $A_{i}$ mit
+    $\diam (A_{i})= d(x_{0},x_{1})$. Da $\diam F_{i}<2$, folgt, dass
+    $d(f(x_{0}), f(x_{1}))<$ und somit $f(x_{0})\neq-f(x_{1})$. Die
+    Tangentialhyperebenen an $K$ in $x_{0}$ und $x_{1}$ sind nicht parallel.
+    Also gilt: $\diam(x_{0},x_{1})<\diam(K)$.  Damit ist der Durchmesser von
+    $A_{i}$ kleiner als der von $K$.
+
+    Nun wählen wir ein $z$ aus dem Inneren von $K$ und setzen
+    $B_{i}\coloneqq\conv(A_{i}\cup\{z\})$. Dann überdecken die $B_{1},\dotsc,
+    B_{n+1}$ das $K$, wobei $\diam B_{i}<\diam K$.
+  \end{proof}
+\end{satz}
+
+
+Etwa 60 Jahre nach \textsc{Borsuk}s Frage wurden erste Gegenbeispiele für
+große Dimensionen gefunden. \textsc{Kahn} und \textsc{Kalai} fanden 1993 eines
+für $n=1325$.
+
+%satz 4
+\begin{satz}[A.\,Nill, Noga Alon]
+  Es gibt eine endliche Teilmenge von $\R^{946}$, die nicht in $947$, sogar
+  nicht in $1649$, Teilmengen kleineren Durchmessers zerlegt werden kann.
+  \begin{proof}
+    \begin{itemize}
+     \item Sei $p$ eine ungerade Primzahl, $m\coloneqq4p$ und
+      $F=\Set{(x_{1},\dotsc, x_{m})\in\{-1,1\}^{m} |
+      x_{1}=1\wedge2\mid\card\Set{i\in\{1,\dotsc,m\} | x_{i}=-1}}$.
+     \item Fakt: Ist $G\subseteq F$, die kein Paar orthogonaler Vektoren
+      enthält, so gilt $\card(G)\leq\sum_{i=0}^{p-1} \binom{m-1}{i}$.
+      \todo{Beweis vom Fakt kommt morgen}
+     \item für $x=(x_{1},\dotsc, x_{m})= (1,x_{2},\dotsc, x_{m})\in F$ sei
+      $\phi(x)= (x_{1}^{2}, x_{2}^{2},\dotsc, x_{m}^{2}, \sqrt{2}x_{1}x_{2},
+      \sqrt{2}x_{1}x_{3},\dotsc,
+      \sqrt{2}x_{m-1}x_{m})\in\R^{m+\binom{m}{2}}\cap\Set{(y_{1},\dotsc,
+      y_{m+\binom{m}{2}}) | y_{1}=\dotsb= y_{m}=1}$. Dann kann $\phi(F)$ als
+      Teilmenge von $\R^{\binom{m}{2}}$ aufgefasst werden:
+      \begin{gather}
+	\label{eq:31}\phi(F)\subseteq\R^{\binom{m}{2}}
+      \end{gather}
+     \item $\forall x,y\in F\colon(\langle\phi(x), \phi(y)\rangle= \langle
+      x,y\rangle^{2}\geq0)$. Denn: $\langle\phi(x), \phi(y)\rangle=
+      \sum_{i=1}^{m} x_{i}^{2}y_{i}^{2}+2\sum_{1\leq j<k\leq m}
+      x_{j}x_{k}y_{j} y_{k}= \sum_{i=1}^{m} x_{i}^{2}y_{i}^{2}+ \sum_{1\leq
+      j,k\leq m; j\neq k} x_{j}x_{k}y_{j}y_{k}= \sum_{j=1}^{m} \sum_{k=1}^{m}
+      x_{j}x_{k}y_{j}y_{k}= (\sum_{j=1}^{m} x_{j}y_{j})(\sum_{k=1}^{m}
+      x_{k}y_{k})= (\langle x,y\rangle^{2})$. Somit liegt $\phi(F)$ auf einer
+      Sphäre um den Ursprung vom Radius $\sqrt{\langle\phi(x),
+      \phi(y)\rangle}= \langle x,y\rangle= m$ und für $x,y\in F$ gilt:
+      $d(\phi(x), \phi(y))= \diam(\phi(F))\Leftrightarrow\langle
+      x,y\rangle=0$.
+
+      Der Fakt besagte, dass jede Teilmenge von $\phi(F)$ mit kleinerem
+      Durchmesser höchstens $\sum_{i=0}^{p-1} \binom{m-1}{i}$ Punkte enthält.
+      Zur Zerlegung von $\phi(F)$ in Teilmengen  kleineren Durchmessers sind
+      mindestens
+      \begin{gather}\label{eq:32}
+	\frac{\card(\phi(F))}{\sum_{i=0}^{p-1} \binom{m-1}{i}} =
+	   \frac{(F)}{\sum_{i=0}^{p-1} \binom{m-1}{i}}=
+	   \frac{2^{m-2}}{\sum_{i=0}^{p-1} \binom{m-1}{i}}
+      \end{gather}
+      Teile nötig.
+
+      Betrachten wir $p=11$. Damit ist $m=44$ und $\binom{m}{2}=946$. Die
+      Anzahl der Teile aus \autoref{eq:32} ist ungefähr $1649\mathord{,}87$.
+      Also gibt es eine endliche Teilmenge von $\R^{946}$, die nicht in $947$
+      bzw. sogar $1649$ Teile kleineren Durchmessers zerlegt werden kann.
+    \end{itemize}
+  \end{proof}
+\end{satz}
 
 \clearpage
 \appendix
